@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 2.1.6 update 1
 ----------------------------------------------------------------------
-  4 Enhancements
+  5 Enhancements
   2 Bugfixes
 ----------------------------------------------------------------------
 2.1.6 update 1 vs. 2.1.6
@@ -12,6 +12,8 @@
   http://sourceforge.net/support/tracker.php?aid=3002616
 
   - OpenXML filter: option to translate slide layouts in PowerPoint presentations
+
+  - OpenOffice.org filter: option to translate links (URL)
 
   Other enhancements:
   - Catalan localisation updated to 2.1.4 (UI, Readme, Instant Start, documentation)
